--- a/6/algorithms.html
+++ b/6/algorithms.html
@@ -30,7 +30,7 @@
         <div class = "breadcrumbs">
             <div class="container">
                 <div class="row">
-                <h3><a href="../index.html">Home</a>>6 - Algorithms & Problem Solving</h3>
+                <h3><a href="../index.html">Home</a>&nbsp;>&nbsp;6 - Algorithms & Problem Solving</h3>
                 </div>
             </div>
         </div>
@@ -43,7 +43,7 @@
                         <strong>
                         <ul class="main_links list-inline">
                             <a href="1/data_representation.html"><li class="col-lg-4 col-md-4 col-sm-6 col-xs-12">6-1<br>Top Down Design</li></a>
-                            <a href="1/data_representation.html"><li class="col-lg-4 col-md-4 col-sm-6 col-xs-12">6-2<br>Flowcharts</li></a>
+                            <a href="2/flowcharts.html"><li class="col-lg-4 col-md-4 col-sm-6 col-xs-12">6-2<br>Flowcharts</li></a>
                             <a href="1/data_representation.html"><li class="col-lg-4 col-md-4 col-sm-6 col-xs-12">6-3<br>Trace Tables</li></a>
                         </ul>
                         <ul class="main_links list-inline">
@@ -58,7 +58,7 @@
         </div>
       
         <!-- FOOTERS -->
-        <div class="footer">
+        <div class="footer" id="mainfooter">
             <div class="container">
                 <div class="row">
                         <h5><i>Inactive links indicate work in progress...</i></h5>
