--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/ctStyles.css" >
-      <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -40,7 +39,7 @@
                         </ul>
                         <ul class="main_links list-inline">
                             <a href="1/data_representation.html"><li class="col-lg-3 col-md-3 col-sm-6 col-xs-12">5<br>Ethics</li></a>
-                            <a href="1/data_representation.html"><li class="col-lg-3 col-md-3 col-sm-6 col-xs-12">6<br>Algorithms</li></a>
+                            <a href="6/algorithms.html"><li class="col-lg-3 col-md-3 col-sm-6 col-xs-12">6<br>Algorithms</li></a>
                             <a href="1/data_representation.html"><li class="col-lg-3 col-md-3 col-sm-6 col-xs-12">7<br>Programming</li></a>
                             <a href="1/data_representation.html"><li class="col-lg-3 col-md-3 col-sm-6 col-xs-12">8<br>Databases</li></a>
                         </ul>
@@ -50,7 +49,7 @@
         </div>
       
         <!-- FOOTERS -->
-        <div class="footer">
+        <div class="footer" id="mainfooter">
             <div class="container">
                 <div class="row">
                         <h5><i>Inactive links indicate work in progress...</i></h5>
