--- a/6/2/flowcharts.html
+++ b/6/2/flowcharts.html
@@ -39,16 +39,14 @@
         <div class = "main_page_content">
             <div class = "container">
                 <div class = "row">
-                    <div class="col-lg-12 col-md-12">
                         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                         <p>
-                        Flowcharts are very useful for displaying an algorithm visually. Consider the algorithm for deciding whether to do your homework. In your mind you think about what you have due the following day, and what the conseuences may be from the teachers that have set it. As a flowchart it would look like this:    
+                        Flowcharts are very useful for displaying an algorithm visually. Consider an algorithm for deciding whether to do your homework or not. In your mind you think about what you have due the following day, and what the consequences may be from teachers! As a flowchart it could look like this:    
                         </p>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                         <img class="img-responsive" src="../../img/flowchart1.png" />
                         </div>
-                    </div>
                 </div>
                 <div class = "row">
                     <div class="col-lg-12 col-md-12">
@@ -56,13 +54,45 @@
                     Flowcharts are also well suited to showing procedural computer programs visually. Consider the classic 'What number am I thinking of?' game. In this game the computer randomly generates a number between 1 and 100. The user has to contiune guessing until they guess the right number. The computer tells the user if their guess was too high or too low.    
                     </p>
                     <p>
-                    A flowchart for 'What number am I thinking of?' is shown below.
+                    A flowchart for 'What number am I thinking of?' is shown below:
+                    </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12 col-md-12" align="center">
+                        <img class="img-responsive" src="../../img/flowchart2.png" />
+                    </div>
+                </div>
+                <div class = "row">
+                    <div class="col-lg-12 col-md-12">
+                    <p>
+                    What similarities and differences do you notice between the first and second flowchart?   
+                    </p>
+                    </div>
+                    <div class="col-lg-6 col-md-6">
+                    <p>
+                    Creating a flowchart for a computer program introduces some new concepts. Firstly you will notice variable assignment. This is done with an arrow pointing from the data on the right to the variable identifier on the left.<strong>This is always the first process in a flowchart.</strong>
+                    </p>
+                    </div>
+                    <div class="col-lg-6 col-md-6">
+                    <p>
+                    Similar to the first example, a decision box initiates a loop (or if the criteria is met, leads to the end of the flowchart). Note how this occurs <strong>before</strong> we get user input for the first time. This appears unusual at first, but will become apparent during coding.
+                    </p>
+                    </div>
+                    <div class="col-lg-6 col-md-6">
+                    <p>
+                    Also like our first example, the questions in the decision boxes are worded as closely to natural English as possible. Sentences start with 'Does' and 'Is' rather than just writing conditions.    
+                    </p>
+                    </div>
+                    <div class="col-lg-6 col-md-6">
+                    <p>
+                    Lastly, note the words INPUT and OUTPUT are capitalized and in paralleograms.    
                     </p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-lg-12 col-md-12">
-                        <img class="img-responsive" src="../../img/flowchart1.png" />
+                        <a href="#" class="btn btn-warning btn-lg">Back to top</a>
                     </div>
                 </div>
             </div>    
