--- a/6/2/flowcharts.html
+++ b/6/2/flowcharts.html
@@ -27,12 +27,12 @@
         </div>
         
         <!-- BREADCRUMBS -->
-        <div class = "breadcrumbs">
-            <div class="container">
-                <div class="row">
-                <h3><a href="../../index.html">Home</a>&nbsp;>&nbsp;<a href="../algorithms.html">6 - Algorithms & Problem Solving</a>&nbsp;>&nbsp;Flowcharts</h3>
-                </div>
-            </div>
+        <div class="container" align="center">
+        <ol class="breadcrumb">
+          <li><a href="../../index.html">Home</a></li>
+          <li><a href="../algorithms.html">Algorithms & Problem Solving</a></li>
+        <li class="active">6-2 - Flowcharts</li>
+        </ol>
         </div>
         
         <!-- Flowchart content -->
