--- a/6/algorithms.html
+++ b/6/algorithms.html
@@ -27,12 +27,11 @@
         </div>
         
         <!-- BREADCRUMBS -->
-        <div class = "breadcrumbs">
-            <div class="container">
-                <div class="row">
-                <h3><a href="../index.html">Home</a>&nbsp;>&nbsp;6 - Algorithms & Problem Solving</h3>
-                </div>
-            </div>
+        <div class="container" align="center">
+        <ol class="breadcrumb">
+          <li><a href="../index.html">Home</a></li>
+          <li class="active">6 - Algorithms & Problem Solving</li>
+        </ol>
         </div>
         
         <!-- Main page links -->
